Search Equipment and Criteria

--- a/EquipmentManagement-project-spring-master/src/main/resources/application-dev.properties
+++ b/EquipmentManagement-project-spring-master/src/main/resources/application-dev.properties
@@ -2,7 +2,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
 spring.datasource.url=jdbc:postgresql://10.72.209.22/equipment
 spring.datasource.username=postgres
